<resources>
    <string name="app_name">Grpr</string>
    <string name="login">login</string>
    <string name="password">Password</string>
    <string name="grpr">GRPR</string>
    <string name="register">Register</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="leave">Leave</string>
    <string name="logout">logout</string>
    <string name="join">Join</string>
    <string name="create">Create</string>
    <string name="username">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="register_and_login">Register and Login</string>
    <string name="grpr_registration">GRPR Registration</string>
    <string name="log_out">Log Out</string>
    <string name="group_frag_title">Group Dash</string>
    <string name="join_group">Join Group</string>
    <string name="group_code">Group Code</string>
    <string name="exit_color">#e91e63</string>
    <string name="entrance_color">#03DAC5</string>
    <string name="end">end</string>
    <string name="leave_group">Leave Group</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send">Send</string>
    <string name="messages">Messages</string>
    <string name="string_messages">messages</string>
</resources>